# MatrixLED-Controller

./: .gitmodules  CMakeLists.txt  README.md
src/: Color.hpp  Common.hpp  ComponentBase.hpp  Controller.cpp  Controller.hpp  Mapper.cpp  Mapper.hpp  Socket.cpp  Socket.hpp  main.cpp
